--- a/scss/_teachers.scss
+++ b/scss/_teachers.scss
@@ -17,6 +17,7 @@
 .teacher {
 
   margin: 5%;
+  padding-top: 3%;
 }
 
 .teacherIMG {
